# backtrader.plus

./: CMakeLists.txt  FEATURE_GAP_ANALYSIS.md  README.md  architecture.md  build.ps1  build.sh
.github/: copilot-instructions.md
docs/: CUSTOM_STRATEGY_GUIDE.md  DATAFEED_ADAPTER_GUIDE.md
examples/: CMakeLists.txt  benchmark_indicators.cpp  example_sma.cpp  sma_crossover_strategy.cpp
include/bt/: analyzer.hpp  backtrader.hpp  broker.hpp  cerebro.hpp  comminfo.hpp  common.hpp  datafeed.hpp  filter.hpp  indicator.hpp  linebuffer.hpp  lineseries.hpp  observer.hpp  optimizer.hpp  order.hpp  params.hpp  resampler.hpp  signal.hpp  signalstrategy.hpp  simd.hpp  sizer.hpp  strategy.hpp  threadpool.hpp  timeframe.hpp  timer.hpp  vectorized.hpp  writer.hpp
include/bt/indicators/: bollinger.hpp  ema.hpp  macd.hpp  rsi.hpp  sma.hpp
python/: CMakeLists.txt  bindings.cpp
python/backtrader_cpp/: __init__.py
src/: CMakeLists.txt  analyzer.cpp  broker.cpp  cerebro.cpp  datafeed.cpp  observer.cpp  strategy.cpp
src/core/: linebuffer.cpp  lineseries.cpp  params.cpp
src/indicators/: ema.cpp  operations.cpp  sma.cpp
tests/: CMakeLists.txt  test_cerebro.cpp  test_indicators.cpp  test_linebuffer.cpp  test_lineseries.cpp  test_params.cpp  test_phase3.cpp  test_phase4.cpp
